# psbmpc

./: .gitignore  Dockerfile  plan.md  plan_taichi.md
.devcontainer/: devcontainer.json
benchmarks/: benchmark_vs_cpp.py
psbmpc_cxx/examples/: run_psbmpc_with_grounding_hazards.cpp
psbmpc_cxx/psbmpc_lib/include/gpu/: cb_cost_functor.cuh  cb_cost_functor_structures.cuh  psbmpc_gpu.cuh
psbmpc_cxx/tests/: CMakeLists.txt  test_cpe_gpu.cu  test_thrust.cu
psbmpc_taichi/: pyproject.toml  verify_solver.py
psbmpc_taichi/benchmarks/: benchmark_cpu_vs_gpu.py  benchmark_vs_cpp.py
psbmpc_taichi/examples/: run_psbmpc.py  run_psbmpc_grounding.py
psbmpc_taichi/psbmpc_taichi/: __init__.py  cost.py  cpe.py  mpc.py  ship_models.py  types.py  utils.py
psbmpc_taichi/tests/: conftest.py  test_comparison.py  test_cost.py  test_cost_gpu.py  test_cpe.py  test_cpe_gpu.py  test_dynamics_gpu.py  test_edge_cases.py  test_mpc.py  test_mpc_gpu.py  test_ship_models.py  test_utils.py
scripts/: build_and_test.sh
